--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: guhhjj-blog_development
   pool: 5
   username: root
-  password: "1234"
+  password: '123456'
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test:
   database: guhhjj-blog_test
   pool: 5
   username: root
-  password:
+  password: '123456'
   host: localhost
 
 production:
@@ -38,5 +38,5 @@ production:
   database: guhhjj-blog_production
   pool: 5
   username: root
-  password:
+  password: '123456'
   host: localhost
